--- a/src/style.css
+++ b/src/style.css
@@ -1,64 +1,78 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  /*background-color: #242424;*/
-  background-color: #d7bcac;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #d7bcac;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 * {
-  user-select: none;
-  box-sizing: border-box;
+    user-select: none;
+    box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    margin: 0;
+    display: flex;
+    min-width: 320px;
+    min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: 2.2em;
+    line-height: 1.1;
 }
-
-
 
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
+    border: 1px solid rebeccapurple;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+    display: flex;
+    align-items: start;
+    justify-content: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+.board {
+    border: 1px solid red;
+    margin-top: 1em;
+    display: grid;
+    gap: 1vw;
+    grid-gap: 1vw;
+}
+
+
+.card {
+    display: inline-block;
+    width: 12vh;
+    height: 20vh;
+    border-radius: 1vw;
+    padding: 0;
+    overflow: clip;
+    border: 0.2em solid white;
+    box-shadow: 0.1em 0.1em 0.21em rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 600px) {
+    .board {
+        margin-top: 1em;
+        display: grid;
+        grid-gap: 0;
+        padding: 0;
+    }
+
+    .card {
+        display: inline-block;
+        border-radius: 2vw;
+        width: 20vw;
+        height: 33.33vw;
+    }
 }
