New color theme

--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,8 @@
     line-height: 1.5;
     font-weight: 400;
 
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #d7bcac;
+    color: #494949; /*rgba(255, 255, 255, 0.87);*/
+    background-color: #71d3e0;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -55,7 +55,7 @@ h1 {
     border-radius: 1vw;
     padding: 0;
     overflow: clip;
-    border: 0.2em solid white;
+    border: 0.3em solid white;
     box-shadow: 0.1em 0.1em 0.21em rgba(0, 0, 0, 0.3);
 }
 
@@ -65,12 +65,12 @@ h1 {
     font-size: 2em;
     font-weight: bold;
     text-decoration: none;
-    border: 5px solid cornflowerblue;
+    border: 5px solid #494949;
     border-radius: 1em;
     margin: 1em;
     padding: 1em 2em;
     background-color: white;
-    color: cornflowerblue;
+    color: #494949;
     text-transform: uppercase;
 }
 
