--- a/src/style.css
+++ b/src/style.css
@@ -65,13 +65,19 @@ h1 {
     font-size: 2em;
     font-weight: bold;
     text-decoration: none;
-    border: 5px solid #494949;
+    border: 5px solid white;
     border-radius: 1em;
     margin: 1em;
     padding: 1em 2em;
     background-color: white;
     color: #494949;
     text-transform: uppercase;
+    box-shadow: 0.1em 0.1em 0.21em rgba(0, 0, 0, 0.3)
+}
+
+.button:hover {
+    background-color: #ffffff;
+    border-color: #494949;
 }
 
 @media (max-width: 600px) {
