--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@ h1 {
 
 
 .board {
+    perspective: 300px;
     margin-top: 1em;
     display: grid;
     gap: 1vw;
@@ -55,7 +56,7 @@ h1 {
     border-radius: 1vw;
     padding: 0;
     overflow: clip;
-    border: 0.3em solid white;
+    border: 0.2em solid white;
     box-shadow: 0.1em 0.1em 0.21em rgba(0, 0, 0, 0.3);
 }
 
@@ -90,6 +91,8 @@ h1 {
         display: grid;
         grid-gap: 2vw;
         padding: 0;
+        overflow: hidden;
+
     }
 
     .card {
